# modlazy

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.json
docs/: api.md  architecture.md  development.md  langgraph-design.md  refactor-design.md
src/: main.cpp
src/app/: App.cpp  App.h
src/graph/: Edge.h  Node.h  State.h  StateGraph.cpp  StateGraph.h
src/graph/nodes/: ConnectNode.cpp  ConnectNode.h  ExecuteNode.cpp  ExecuteNode.h  IdleNode.cpp  IdleNode.h  LLMNode.cpp  LLMNode.h
src/llm/: LLMClient.h  MockLLMClient.cpp  MockLLMClient.h
src/modbus/: ModbusClient.cpp  ModbusClient.h
src/ui/: CommandBar.cpp  CommandBar.h  ConnectionPanel.cpp  ConnectionPanel.h  HelpPanel.cpp  HelpPanel.h  LogPanel.cpp  LogPanel.h  MainView.cpp  MainView.h  MessageBox.cpp  MessageBox.h  OperationPanel.cpp  OperationPanel.h  StatusBar.cpp  StatusBar.h
